--- a/k8s.yaml
+++ b/k8s.yaml
@@ -24,9 +24,11 @@ apiVersion: v1
 kind: Service
 metadata:
    name: demo
+   annotations:
+     service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
 spec:
    selector:
-     app: jenkins-demo
+     app: LoadBalancer
    type: NodePort
    ports:
    - port: 18888
